EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==10/16/2008
Derision: Cosmetic change to foraging to correctly identify food/drink items.
cavedude00: Added rules to determine if /ooc and /auction should be server wide (true) or zone wide (false - Live Like).
cavedude00: #peqzone can no longer be used if invulnerable.

Optional SQL:
insert into rule_values values (0, 'Chat:ServerWideOOC', 'true');
insert into rule_values values (0, 'Chat:ServerWideAuction', 'true');

==10/15/2008
Derision: Added OP_LevelAppearance to utils/patch_Titanium.conf and it is now sent to nearby clients (eye candy when you level)
Derision: (seveianrex) Alcohol Drinking / Skillup Fix
KLS: Change to proc code to correct some oddities with % chance to proc.
KLS: Changed how avoidance bonuses are calculated to be like other melee bonuses.
KLS: (seveianrex) Basic Pet Focus Implementation.

==10/14/2008
Trevius: Charm Spells set to max level of 0 now have unlimited max level as they should
Derision: Player pets should no longer be fearable if npcspecialattks contains 'D'.
cavedude00: (Rocker8956) Changes to quest::getlevel and quest::setinstflag/setinstflagmanually to reduce DB access
cavedude00: (Rocker8956) Added quest::getinstflag
KLS: Fixed crash in shutdown delay, please test things for crashes before adding them, this was pretty obvious.
Derision: Removed requirement to be grouped for Translocate spells.

==10/13/2008
Derision: Looting your corpse while liched/wolf form etc should now auto-equip items

==10/12/2008
Derision: No more binding wounds while feigning death.
Derision: (Rocker8956) Movegrp quest command fix.
Derision: (LeftRoad) TEMPORARY(NORENT) items in a character inventory will be retained if you log back into that character within 30 minutes.
KLS: Implemented Raid::TeleportGroup() and Raid::TeleportRaid(), untested but should work.
KLS: (seveianrex) Critical DoT and Sinister Strikes AA.

==10/11/2008